# Raspberry_IPC_MMAP

./: CMakeLists.txt  README.md
img/: mmap.drawio
include/: button_interface.h  led_interface.h
lib/: mapping.c  mapping.h
src/: button_interface.c  button_process.c  launch_processes.c  led_interface.c  led_process.c
src/platform/pc/: button_process.c  led_process.c
src/platform/raspberry/: button_process.c  led_process.c
